springapp/old/lbingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
   name: springsql-ingress
   annotations:
      nginx.ingress.kubernetes.io/rewrite-target: /
spec:
   rules:
   - http:
       paths:
       - path: "/springflow"
           pathType: Prefix
           backend:
               serviceName: springflow
               servicePort: 8080
       - path: "/springapp"
           pathType: Prefix
           backend:
               serviceName: springflow
               servicePort: 8080
